--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+        "@config/*": ["config/*"],
+        "@HOC/*": ["HOC/*"],
+        "@components/*": ["components/*"],
+        "@styles/*": ["styles/*"],
+        "@public/*": ["public/*"],
+        "@services/*": ["services/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
