--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ yarn-error.log*
 next-env.d.ts
 
 # firebase
-/./config/firebaseConfig.js
-/./config/admin-sdk.json
+/config/firebaseConfig.js
+/config/admin-sdk.json
