--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "@styles/*": ["styles/*"],
         "@public/*": ["public/*"],
         "@services/*": ["services/*"],
+        "@pages/*": ["pages/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
