--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.0",
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.22.0",
     "firebase-tools": "^11.6.0",
     "formik": "^2.2.9",
     "next": "12.2.4",
